// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Cards/Card Default 1`] = `
.c8 {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.c8 a {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.c6 {
  text-transform: uppercase;
  margin-top: 0;
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 700;
  color: #6D6E70;
  font-size: 34px;
}

.c1 {
  overflow: hidden;
  border-bottom-left-radius: 40px;
  border-top-right-radius: 40px;
  position: relative;
  height: 450px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition: -webkit-transform 0.5s ease-out;
  -webkit-transition: transform 0.5s ease-out;
  transition: transform 0.5s ease-out;
  width: 100%;
  height: 100%;
}

.c0 {
  position: relative;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: all 0.5s ease-out;
  transition: all 0.5s ease-out;
}

.c0:hover .c2 {
  -webkit-transform: scale(1.25);
  -ms-transform: scale(1.25);
  transform: scale(1.25);
}

.c7 {
  margin-top: 29px;
  margin-bottom: 0px;
}

.c4 {
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c8 {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c8 a {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c6 {
    font-size: 25px;
  }
}

@media screen and (max-width:767px) {
  .c1 {
    height: 400px;
  }
}

<div
  style={
    Object {
      "maxWidth": 300,
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2 c3"
      >
        <img
          alt="dummy"
          src="https://dummyimage.com/600x400/ccc/fff.png"
        />
      </div>
    </div>
    <div
      className="c4"
    >
      <div
        className="c5"
      >
        <h4
          className="c6 c7"
          color="primary"
        >
          Example card
        </h4>
        <div
          style={
            Object {
              "marginTop": "20px",
            }
          }
        >
          <span
            className="c8"
            size="md"
          >
            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo.
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Cards/Card With Button 1`] = `
.c9 {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: bold;
  border: 0;
  border-radius: 20px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  text-transform: uppercase;
  font-size: 16px;
  padding: 0px 32px;
  height: 40px;
  background-color: transparent;
  color: #6D6E70;
  border: 1px solid #6D6E70;
}

.c9:hover {
  background-color: #6D6E70;
  color: #FFF;
}

.c8 {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.c8 a {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.c6 {
  text-transform: uppercase;
  margin-top: 0;
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 700;
  color: #6D6E70;
  font-size: 34px;
}

.c1 {
  overflow: hidden;
  border-bottom-left-radius: 40px;
  border-top-right-radius: 40px;
  position: relative;
  height: 450px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition: -webkit-transform 0.5s ease-out;
  -webkit-transition: transform 0.5s ease-out;
  transition: transform 0.5s ease-out;
  width: 100%;
  height: 100%;
}

.c0 {
  position: relative;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: all 0.5s ease-out;
  transition: all 0.5s ease-out;
}

.c0:hover .c2 {
  -webkit-transform: scale(1.25);
  -ms-transform: scale(1.25);
  transform: scale(1.25);
}

.c7 {
  margin-top: 29px;
  margin-bottom: 0px;
}

.c4 {
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c8 {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c8 a {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c6 {
    font-size: 25px;
  }
}

@media screen and (max-width:767px) {
  .c1 {
    height: 400px;
  }
}

<div
  style={
    Object {
      "maxWidth": 300,
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2 c3"
      >
        <img
          alt="dummy"
          src="https://dummyimage.com/600x400/ccc/fff.png"
        />
      </div>
    </div>
    <div
      className="c4"
    >
      <div
        className="c5"
      >
        <h4
          className="c6 c7"
          color="primary"
        >
          Example card
        </h4>
        <div
          style={
            Object {
              "marginTop": "20px",
            }
          }
        >
          <span
            className="c8"
            size="md"
          >
            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo.
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "marginTop": "20px",
          }
        }
      >
        <button
          className="c9"
          data-testid="action-button"
        >
          Action
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Cards/Card With Pre Title 1`] = `
.c6 {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 14px;
  line-height: 20px;
  color: inherit;
}

.c6 a {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 14px;
  line-height: 20px;
  color: inherit;
}

.c10 {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.c10 a {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.c8 {
  text-transform: uppercase;
  margin-top: 0;
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 700;
  color: #6D6E70;
  font-size: 34px;
}

.c1 {
  overflow: hidden;
  border-bottom-left-radius: 40px;
  border-top-right-radius: 40px;
  position: relative;
  height: 450px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition: -webkit-transform 0.5s ease-out;
  -webkit-transition: transform 0.5s ease-out;
  transition: transform 0.5s ease-out;
  width: 100%;
  height: 100%;
}

.c0 {
  position: relative;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: all 0.5s ease-out;
  transition: all 0.5s ease-out;
}

.c0:hover .c2 {
  -webkit-transform: scale(1.25);
  -ms-transform: scale(1.25);
  transform: scale(1.25);
}

.c9 {
  margin-top: 14px;
  margin-bottom: 0px;
}

.c7 {
  font-style: italic;
  font-weight: bold;
  margin-top: 33px;
}

.c4 {
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c10 {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c10 a {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c8 {
    font-size: 25px;
  }
}

@media screen and (max-width:767px) {
  .c1 {
    height: 400px;
  }
}

<div
  style={
    Object {
      "maxWidth": 300,
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2 c3"
      >
        <img
          alt="dummy"
          src="https://dummyimage.com/600x400/ccc/fff.png"
        />
      </div>
    </div>
    <div
      className="c4"
    >
      <div
        className="c5"
      >
        <span
          className="c6 c7"
          size="sm"
        >
          01 gennaio 2023, Location
        </span>
        <h4
          className="c8 c9"
          color="primary"
        >
          Example card
        </h4>
        <div
          style={
            Object {
              "marginTop": "20px",
            }
          }
        >
          <span
            className="c10"
            size="md"
          >
            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo.
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Cards/Card With Tag And Button 1`] = `
.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: #FFF;
}

.c3 > svg {
  height: 20px;
  color: #FFF;
}

.c14 {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: bold;
  border: 0;
  border-radius: 20px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  text-transform: uppercase;
  font-size: 16px;
  padding: 0px 32px;
  height: 40px;
  background-color: transparent;
  color: #6D6E70;
  border: 1px solid #6D6E70;
}

.c14:hover {
  background-color: #6D6E70;
  color: #FFF;
}

.c4 {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 14px;
  line-height: 20px;
  color: #FFF;
}

.c4 a {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 14px;
  line-height: 20px;
  color: #FFF;
}

.c13 {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.c13 a {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.c11 {
  text-transform: uppercase;
  margin-top: 0;
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 700;
  color: #6D6E70;
  font-size: 34px;
}

.c6 {
  overflow: hidden;
  border-bottom-left-radius: 40px;
  border-top-right-radius: 40px;
  position: relative;
  height: 450px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition: -webkit-transform 0.5s ease-out;
  -webkit-transition: transform 0.5s ease-out;
  transition: transform 0.5s ease-out;
  width: 100%;
  height: 100%;
}

.c0 {
  position: relative;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-transition: all 0.5s ease-out;
  transition: all 0.5s ease-out;
}

.c0:hover .c7 {
  -webkit-transform: scale(1.25);
  -ms-transform: scale(1.25);
  transform: scale(1.25);
}

.c1 {
  position: absolute;
  top: 20px;
  left: 20px;
  z-index: 1;
}

.c12 {
  margin-top: 29px;
  margin-bottom: 0px;
}

.c9 {
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c10 {
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  text-transform: uppercase;
  margin-left: 9px;
}

.c2 {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: bold;
  border: 0;
  border-radius: 20px;
  line-height: 1;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0px 14px 0px 10px;
  height: 30px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F9942E;
  box-shadow: 0 0 10px 0 rgba(0,0,0,0.5);
  border: 1px solid #FFF;
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c13 {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c13 a {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c11 {
    font-size: 25px;
  }
}

@media screen and (max-width:767px) {
  .c6 {
    height: 400px;
  }
}

<div
  style={
    Object {
      "maxWidth": 300,
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <span
          className="c3"
          color="#FFF"
          size="xs"
        >
          <svg
            viewBox="0 0 50 50"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M22.972 2.66 2.422 17.59a3.45 3.45 0 0 0-1.253 3.856l7.85 24.158a3.449 3.449 0 0 0 3.28 2.384h25.402a3.45 3.45 0 0 0 3.28-2.384l7.85-24.158a3.45 3.45 0 0 0-1.253-3.856L27.028 2.66a3.448 3.448 0 0 0-4.056 0"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
        <span
          className="c4 c5"
          color="light"
          size="sm"
        >
          stone
        </span>
      </div>
    </div>
    <div
      className="c6"
    >
      <div
        className="c7 c8"
      >
        <img
          alt="dummy"
          src="https://dummyimage.com/600x400/ccc/fff.png"
        />
      </div>
    </div>
    <div
      className="c9"
    >
      <div
        className="c10"
      >
        <h4
          className="c11 c12"
          color="primary"
        >
          Example card
        </h4>
        <div
          style={
            Object {
              "marginTop": "20px",
            }
          }
        >
          <span
            className="c13"
            size="md"
          >
            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo.
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "marginTop": "20px",
          }
        }
      >
        <button
          className="c14"
          data-testid="action-button"
        >
          Action
        </button>
      </div>
    </div>
  </div>
</div>
`;
